# Epipolar_evaluation

./: .gitignore  .gitmodules  CMakeLists.txt  GN_eval.sh  LICENSE  README.md  all_eval.sh  analyze.sh  config.yaml  config4eth3d  consistent_eval.sh  eth3d_eval.sh  evaluate.ps1  evaluate.sh  helper.sh  kitti_eval.sh  m-consistent_eval.sh  mpts_eval.ps1  result_aggregate.py
cmake/: FindSDPA.cmake
simulations/: GN_on_normalized_E.m  Readme.txt  SDP_TPAMI.m  basic_LM.m  cal_E.m  consistent_essential_est.m  consistent_essential_est_TLS_GN.m  consistent_essential_est_v6.m  consistent_essential_est_v7.m  consistent_essential_est_v8.m  consistent_essential_est_varied_GN_num.m  eigen_solver.m  fivept_solver.m  fivept_solver_ransac.m  main_MSE_bias_vs_pt_number_sigma_Fig4_and_Fig5.m  main_MSE_vs_pt_distribution_Fig7.m  main_MSE_vs_t_length_Fig6.m  main_diff_eigenvector_supplementary_Figure1.m  main_non_iid_noise_supplementary_Figure3.m  main_robustness_with_outliers_Fig9.m  main_varied_GN_number_Fig8.m  robust_LM.m
simulations/RANSAC_5pt/: calibrated_fivepoint_non_gb.m  essmatrixNLS.m  peig5pt.m
src/: cameras.cc  cameras.h  const_est.hpp  draw_corre.hpp  eth3d_GN.cc  eval.cc  evaluate.hpp  images.cc  images.h  kitti_analysis.cc  kitti_eval.cc  m_pts_eval.cc  main.cc  manifold_GN.hpp  pt3d.hpp  utils.hpp
src/data_loader/: cameras.h  draw_corre.hpp  images.cc  images.h
src/kitti_tools/: epipolar_hist.py  generate_gt_pose_rel.py  get_pts.py  get_pts_optiflow.py  gtpose.py  kitti_epipolar_l_prj.py
src/methods/: PoseSovlerWrapper.hpp  const_est.hpp  eigensolver_wrapper.hpp  lm_method_wrapper.hpp  lm_wrapper.hpp  manifold_GN.hpp
src/methods/E_sdp/: tmp.bak
